--- a/08_other_types/02_comprehension.ipynb
+++ b/08_other_types/02_comprehension.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "生成器表达式返回的是一个生成器迭代器 generator。表达式会产生一系列值，可使用内置函数 [next()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/42_next.ipynb) 逐一获取，或使用 for 循环遍历。\n",
+    "生成器表达式返回的是一个生成器迭代器 generator。表达式会产生一系列值，可使用内置函数 [next()](../11_built-in_function/42_next.ipynb) 逐一获取，或使用 for 循环遍历。\n",
     "\n",
     "生成器迭代器中的元素，仅供一次性使用，而且可以要多少取多少，它会记住你取了多少，取到了哪里。"
    ]
@@ -201,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
