--- a/15_module/05_import_code.ipynb
+++ b/15_module/05_import_code.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "导入操作使用 import 语句，详细的语法规则查看 [import 导入语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/18_import.ipynb)。\n",
+    "导入操作使用 import 语句，详细的语法规则查看 [import 导入语句](../10_statement/18_import.ipynb)。\n",
     "\n",
     "- `import ...` 只能导入模块："
    ]
@@ -155,68 +155,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- `from ... import *` 将导入模块中所有的公有属性：\n",
-    "\n",
-    "例如，如果在文件 `mycode/__init__.py` 中我们定义了属性 `__all__` ，从包 `mycode` 导入则只能导入该属性中的名称；在文件 `mycode/mycode.py` 中，以下划线打头的属性名，从模块 `mycode.mycode` 导入时都不可导入。\n",
-    "\n",
-    "通常情况下不应使用这个功能，因为它在解释器中引入了一组未知的名称，而它们很可能会覆盖一些你已经定义过的名称。而且会导致代码的可读性很差。"
+    "- `from ... import *` 将导入模块中所有的公有属性："
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# mycode/__init__.py\n",
-    "__all__ = ['mycode','xue']"
+    "当前文件路径下，有一个 `myfile` 的包，包里有 `space.py`，`mycode.py` 和 `__init__.py` 等模块，`__init__.py` 内容为空，则 `myfile` 包里的模块都不是它的属性，无法导入"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mycode/mycode.py\n",
-    "_a = '自学'\n",
-    "\n",
-    "def __f():\n",
-    "    print(_a)\n",
-    "\n",
-    "print('mycode')\n",
-    "\n",
-    "from mycode import xue\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    print(xue.msg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<module 'mycode.mycode' from 'E:\\\\xue\\\\脚本\\\\kp_book\\\\15_module\\\\mycode\\\\mycode.py'>,\n",
-       " <module 'mycode.xue' from 'E:\\\\xue\\\\脚本\\\\kp_book\\\\15_module\\\\mycode\\\\xue.py'>)"
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from mycode import *\n",
-    "mycode, xue"
+    "import myfile\n",
+    "dir(myfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mycode' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21108/1508979804.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmyfile\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmycode\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'mycode' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from myfile import *\n",
+    "mycode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果在文件 `__init__.py` 中我们定义了属性 `__all__` ，从包 `myfile` 导入则只能导入该属性中的列出名称。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 修改 myfile/__init__.py\n",
+    "__all__ = ['mycode','xue']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我是mycode模块中的代码\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'myfile.mycode' from 'D:\\\\Jupyter\\\\jupyter\\\\jupyter-python\\\\15_module\\\\myfile\\\\mycode.py'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from myfile import *\n",
+    "mycode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在文件 `myfile/mycode.py` 中，以下划线打头的属性名，从模块 `mycode.mycode` 导入时都不可导入。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# myfile/mycode.py\n",
+    "_a = '自学'\n",
+    "\n",
+    "def __f():\n",
+    "    print(_a)\n",
+    "\n",
+    "msg1 = '我是mycode模块中的代码'\n",
+    "print(msg1)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    msg2 = '我是导入其他模块不会执行的代码'\n",
+    "    print(msg2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,19 +300,19 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-e68848edb46a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmycode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmycode\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0m_a\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9512/1217097939.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmyfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmycode\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0m_a\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name '_a' is not defined"
      ]
     }
    ],
    "source": [
-    "from mycode.mycode import *\n",
+    "from myfile.mycode import *\n",
     "_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +322,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-004321bbfec5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0m__f\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9512/3733874203.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0m__f\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name '__f' is not defined"
      ]
     }
@@ -258,21 +332,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "通常情况下不应使用这个功能，因为它在解释器中引入了一组未知的名称，而它们很可能会覆盖一些你已经定义过的名称。而且会导致代码的可读性很差。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function __f at 0x000001E45129B430>\n"
+      "<function __f at 0x00000157E4BA53A0>\n"
      ]
     }
    ],
    "source": [
     "# 其他方式则可以导入\n",
-    "from mycode.mycode import __f\n",
+    "from myfile.mycode import __f\n",
     "print(__f)\n",
     "del __f"
    ]
@@ -283,12 +364,12 @@
    "source": [
     "- 相对导入：\n",
     "\n",
-    "存在相对导入代码的模块，通常是不能直接执行的。因为直接执行，解释器认为该模块即为顶级模块，属性 `__package__` 的值为 None。但可以使用 `python -m 模块` 命令直接执行。"
+    "存在相对导入代码的模块，通常是不能直接执行的。因为直接执行，解释器认为该模块即为顶级模块，属性 `__package__` 的值为 None。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +388,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "例如，当前文件路径下，文件 `mycode/test.py` 中相对导入的代码可以使用 `python -m 模块` 命令直接执行，因为该命令将属性 `__package__` 重新设置为顶级模块的名称："
+    "但可以使用 `python -m 模块` 命令直接执行。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "例如，当前文件路径下，文件 `myfile/test.py` 中相对导入的代码可以使用 `python -m 模块` 命令直接执行，因为该命令将属性 `__package__` 重新设置为顶级模块的名称："
    ]
   },
   {
@@ -316,8 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# xue.py 模块在 mycode 包中\n",
-    "# mycode/test.py\n",
+    "# xue.py 模块在 myfile 包中，内容是 “msg = '自学是门手艺'”\n",
+    "# myfile/test.py 的内容\n",
     "from . import xue\n",
     "print(xue.msg)\n",
     "print(__package__)"
@@ -325,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -333,12 +421,12 @@
      "output_type": "stream",
      "text": [
       "自学是门手艺\n",
-      "mycode\n"
+      "myfile\n"
      ]
     }
    ],
    "source": [
-    "%run -m mycode.test"
+    "%run -m myfile.test"
    ]
   },
   {
@@ -373,7 +461,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -387,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
