--- a/16_class/02_class_definition.ipynb
+++ b/16_class/02_class_definition.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "类是用来创建用户定义对象的模板，是抽象的对象（类对象）。例如我们说鱼类，指的就是一类抽象的对象，而具体到武昌鱼，鲈鱼，鲫鱼…… 就是具体的对象。\n",
     "\n",
-    "定义了一个类，就可以用这个模块来创建它的具体对象（实例）。类定义的详细语法规则见 [class 定义类](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/13_class.ipynb)。\n",
+    "定义了一个类，就可以用这个模块来创建它的具体对象（实例）。类定义的详细语法规则见 [class 定义类](../10_statement/13_class.ipynb)。\n",
     "\n",
     "创建一个类，需要继承另一个类。新创建的类是子类，继承的类是基类。如不指定，创建类默认继承自所有类的基类 object。\n",
     "\n",
@@ -205,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
