--- a/16_class/07_attribute.ipynb
+++ b/16_class/07_attribute.ipynb
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "有时也只将具体的值称为属性从而与抽象的值（类，函数，方法等对象的值）区分开来。例如将一个人有身体和四肢的属性和这个人会唱歌跳舞的属性区分开来。"
+    "有时也只将具体的值称为属性从而与抽象的值（类，函数，方法等对象的值）区分开来。犹如将一个人有身体和四肢的属性和这个人会唱歌跳舞的属性区分开来。"
    ]
   },
   {
@@ -369,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
