--- a/01_numeric/01_numeric.ipynb
+++ b/01_numeric/01_numeric.ipynb
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "整数，浮点数和复数的构造函数分别是：[int()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/32_int.ipynb)，[float()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/21_float.ipynb) 和 [complex()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/12_complex.ipynb)。构造细节详见相应内置函数知识点。"
+    "整数，浮点数和复数的构造函数分别是：[int()](../11_built-in_function/32_int.ipynb)，[float()](../11_built-in_function/21_float.ipynb) 和 [complex()](../11_built-in_function/12_complex.ipynb)。构造细节详见相应内置函数知识点。"
    ]
   },
   {
@@ -225,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
