--- a/02_string/01_string.ipynb
+++ b/02_string/01_string.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "内建函数 [str()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/59_str.ipynb) 可将其他类型对象转换为字符串："
+    "内建函数 [str()](../11_built-in_function/59_str.ipynb) 可将其他类型对象转换为字符串："
    ]
   },
   {
@@ -245,7 +245,7 @@
    "source": [
     "字符串可带前缀 u（或 U），r（或 R），f（或 F）。\n",
     "\n",
-    "u 表示 Unicode 编码字符串（默认，可省略）；r 表示原始字符串，其中的反斜杠会被当作其本身来处理；f 表示[格式化字符串字面值](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/02_string/27_f-string.ipynb)。r 和 f 可连用。"
+    "u 表示 Unicode 编码字符串（默认，可省略）；r 表示原始字符串，其中的反斜杠会被当作其本身来处理；f 表示[格式化字符串字面值](../02_string/27_f-string.ipynb)。r 和 f 可连用。"
    ]
   },
   {
@@ -387,7 +387,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -401,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
