--- a/02_string/27_f-string.ipynb
+++ b/02_string/27_f-string.ipynb
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "还可带一个以冒号 ':' 标示的格式说明符，“格式化迷你语言” 与 str.format() 方法所使用的微语言一致，详见 [str.format](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/02_string/25_str.format.ipynb) 方法。"
+    "还可带一个以冒号 ':' 标示的格式说明符，“格式化迷你语言” 与 str.format() 方法所使用的微语言一致，详见 [str.format](../02_string/25_str.format.ipynb) 方法。"
    ]
   },
   {
@@ -324,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -338,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
