--- a/03_list/01_list.ipynb
+++ b/03_list/01_list.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "列表创建方法有：直接用一对方括号表示；[列表推导式](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/03_list/02_list_comprehension.ipynb)；或使用内建函数 [list()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/37_list.ipynbb)。"
+    "列表创建方法有：直接用一对方括号表示；[列表推导式](../03_list/02_list_comprehension.ipynb)；或使用内建函数 [list()](../11_built-in_function/37_list.ipynbb)。"
    ]
   },
   {
@@ -257,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
