--- a/03_list/03_list_indexes_and_slices.ipynb
+++ b/03_list/03_list_indexes_and_slices.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "列表是序列类型中的可变类型，它的索引和切片操作，和通用的序列操作比较，有许多不一样的地方，主要体现在利用索引和切片对列表元素进行增、删、改。\n",
     "\n",
-    "索引和切片是序列类型通用操作，详细的规则和用法，见[序列索引和切片](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/05_sequence/03_index_slice.ipynb)。\n",
+    "索引和切片是序列类型通用操作，详细的规则和用法，见[序列索引和切片](../05_sequence/03_index_slice.ipynb)。\n",
     "\n",
     "列表可以利用索引替换某一个元素："
    ]
@@ -228,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
