--- a/03_list/04_list_operator.ipynb
+++ b/03_list/04_list_operator.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "列表可以使用 [比较运算符](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/09_operator/02_compare.ipynb)，但比较运算符对数据通用，单独用一个知识点讲解。该知识点介绍有列表自己特性的操作符 `+` 和 `*`。\n",
+    "列表可以使用 [比较运算符](../09_operator/02_compare.ipynb)，但比较运算符对数据通用，单独用一个知识点讲解。该知识点介绍有列表自己特性的操作符 `+` 和 `*`。\n",
     "\n",
     "### 操作符 +\n",
     "\n",
@@ -246,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
