--- a/04_tuple/01_tuple.ipynb
+++ b/04_tuple/01_tuple.ipynb
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "内置函数 [tuple()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/62_tuple.ipynb) 用来构造元组："
+    "内置函数 [tuple()](../11_built-in_function/62_tuple.ipynb) 用来构造元组："
    ]
   },
   {
@@ -223,7 +223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -237,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
