--- a/04_tuple/04_operator.ipynb
+++ b/04_tuple/04_operator.ipynb
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "元组中的元素如果是可变对象，`*` 重复拼接后，可变对象的性质同 [列表操作符](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/03_list/04_list_operator.ipynb) 知识点一样，仍然是同一个对象的多次引用："
+    "元组中的元素如果是可变对象，`*` 重复拼接后，可变对象的性质同 [列表操作符](../03_list/04_list_operator.ipynb) 知识点一样，仍然是同一个对象的多次引用："
    ]
   },
   {
@@ -235,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -249,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
