--- a/06_set/01_set.ipynb
+++ b/06_set/01_set.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "因为一对花括号表示字典而非集合，所以创建空集合必须使用构造函数 [set()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/54_set.ipynb) 和 [frozenset()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/23_frozenset.ipynb) 来表示。两个内置函数还可将可迭代对象转换为集合："
+    "因为一对花括号表示字典而非集合，所以创建空集合必须使用构造函数 [set()](../11_built-in_function/54_set.ipynb) 和 [frozenset()](../11_built-in_function/23_frozenset.ipynb) 来表示。两个内置函数还可将可迭代对象转换为集合："
    ]
   },
   {
@@ -339,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
