--- a/07_dictionary/01_dict.ipynb
+++ b/07_dictionary/01_dict.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "字典可以通过花括号包含逗号分隔的 键值对 来创建，也可以用内置函数 [dict()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/14_dict.ipynb) 来创建。"
+    "字典可以通过花括号包含逗号分隔的 键值对 来创建，也可以用内置函数 [dict()](../11_built-in_function/14_dict.ipynb) 来创建。"
    ]
   },
   {
@@ -301,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
