--- a/08_other_types/03_other_types.ipynb
+++ b/08_other_types/03_other_types.ipynb
@@ -183,9 +183,9 @@
    "source": [
     "### 代码对象\n",
     "\n",
-    "代码对象可由内置的 [compile()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/11_compile.ipynb) 函数返回，也可通过从函数对象的 `__code__` 属性从中提取。\n",
+    "代码对象可由内置的 [compile()](../11_built-in_function/11_compile.ipynb) 函数返回，也可通过从函数对象的 `__code__` 属性从中提取。\n",
     "\n",
-    "可将代码对象（而非源码字符串）传给 [exec()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/19_exec.ipynb) 或 [eval()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/18_eval.ipynb) 内置函数来执行或求值。"
+    "可将代码对象（而非源码字符串）传给 [exec()](../11_built-in_function/19_exec.ipynb) 或 [eval()](../11_built-in_function/18_eval.ipynb) 内置函数来执行或求值。"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "source": [
     "### 类型对象\n",
     "\n",
-    "类型对象表示各种对象类型。对象的类型可通过内置函数 [type()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp) 来获取。类型没有特殊的操作。标准库模块 types 定义了所有标准内置类型的名称。"
+    "类型对象表示各种对象类型。对象的类型可通过内置函数 type() 来获取。类型没有特殊的操作。标准库模块 types 定义了所有标准内置类型的名称。"
    ]
   },
   {
@@ -280,7 +280,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
