--- a/09_operator/01_operator_summary.ipynb
+++ b/09_operator/01_operator_summary.ipynb
@@ -17,19 +17,19 @@
     "\n",
     "- 数字运算符\n",
     "\n",
-    "`+`，`-`，`*`，`**`，`/`，`//`，`%`，详细用法见 [数字运算](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/01_numeric/06_number_operations.ipynb)。\n",
+    "`+`，`-`，`*`，`**`，`/`，`//`，`%`，详细用法见 [数字运算](../01_numeric/06_number_operations.ipynb)。\n",
     "\n",
     "- 整数按位运算符\n",
     "\n",
-    "`<<`，`>>`，`&`，`|`，`^`，`~`，详细用法见 [整数及其位运算](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/01_numeric/02_int.ipynb)。\n",
+    "`<<`，`>>`，`&`，`|`，`^`，`~`，详细用法见 [整数及其位运算](../01_numeric/02_int.ipynb)。\n",
     "\n",
     "- 比较运算符\n",
     "\n",
-    "`<`，`>`，`<=`，`>=`，`==`，`!=`，`in`，`not in`，`is`，`is not`，详细用法见 [比较运算符](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/09_operator/02_compare.ipynb)。\n",
+    "`<`，`>`，`<=`，`>=`，`==`，`!=`，`in`，`not in`，`is`，`is not`，详细用法见 [比较运算符](../09_operator/02_compare.ipynb)。\n",
     "\n",
     "- 布尔运算符\n",
     "\n",
-    "`and`，`or`，`not`，详细用法见 [布尔值及布尔运算](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/01_numeric/03_bool.ipynb)。\n",
+    "`and`，`or`，`not`，详细用法见 [布尔值及布尔运算](../01_numeric/03_bool.ipynb)。\n",
     "\n",
     "- 赋值运算符 `:=`\n",
     "\n",
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "上述分隔符 `=` 为赋值操作符，之后的操作符为增强赋值操作符，将名称绑定（或重新绑定）到特定值，以及修改属性或可变对象的成员项。 详见 [赋值语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/02_assignment.ipynb)。\n",
+    "上述分隔符 `=` 为赋值操作符，之后的操作符为增强赋值操作符，将名称绑定（或重新绑定）到特定值，以及修改属性或可变对象的成员项。 详见 [赋值语句](../10_statement/02_assignment.ipynb)。\n",
     "\n",
     "假设将值 value1 绑定到名称 name，`name = value1`，则 `name += value2` 的结果相当于 `name = name + value2`，其他操作符类似。\n",
     "\n",
@@ -257,7 +257,7 @@
    "source": [
     "除了运算符和分隔符，还有 `'`，`\"`，`\\`，`#` 字符，作为其他字符的组成部分时具有特殊含义，或是对词法分析器有重要意义。\n",
     "\n",
-    "`'`，`\"`，`\\`，详见 [字符串概述](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/02_string/01_string.ipynb) 和 [转义字符](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/02_string/03_escape_character.ipynb)。\n",
+    "`'`，`\"`，`\\`，详见 [字符串概述](../02_string/01_string.ipynb) 和 [转义字符](../02_string/03_escape_character.ipynb)。\n",
     "\n",
     "`#` 通常用来注释代码，但不能包含在字符串中，注释在语法分析中会被忽略："
    ]
@@ -290,13 +290,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "操作符除了常规的用法，操作不同的数据类型，相应的数据类型可能定义了特定的操作规则；在特定的应用场景，也有着特殊的用法。详见 [操作符特殊用法](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/09_operator/04_special.ipynb)"
+    "操作符除了常规的用法，操作不同的数据类型，相应的数据类型可能定义了特定的操作规则；在特定的应用场景，也有着特殊的用法。详见 [操作符特殊用法](../09_operator/04_special.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
