--- a/09_operator/04_special.ipynb
+++ b/09_operator/04_special.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- `+`，`+=`，`*`，`*=` 可用来对序列类型进行拼接，重复拼接或拼接并赋值（range 类型除外）。由于列表是可变对象，`+=` 和 `*=` 在操作列表时，是用来更新列表。具体详见 [列表操作符](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/03_list/04_list_operator.ipynb)。"
+    "- `+`，`+=`，`*`，`*=` 可用来对序列类型进行拼接，重复拼接或拼接并赋值（range 类型除外）。由于列表是可变对象，`+=` 和 `*=` 在操作列表时，是用来更新列表。具体详见 [列表操作符](../03_list/04_list_operator.ipynb)。"
    ]
   },
   {
@@ -106,17 +106,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 操作符 `**`，`|` 和 `|=` 可以用来操作字典。具体详见 [字典操作符](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/07_dictionary/14_operator.ipynb)。\n",
+    "- 操作符 `**`，`|` 和 `|=` 可以用来操作字典。具体详见 [字典操作符](../07_dictionary/14_operator.ipynb)。\n",
     "\n",
     "- 操作符 `>`，`<`，`>=`，`<=` 可对集合进行子集或超集比较；`|`，`&`，`-`，`^` 可求集合的并集，交集，差集，对称差集；`|=`，`&=`，`-=`，`^=` 可用来更新集合。具体详见集合知识点。\n",
     "\n",
-    "- 操作符 `%` 可以用来格式化字符串，而在**格式化迷你语言**中，定义了非常多的有特殊意义操作符。具体详见 [str.format 格式化](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/02_string/25_str.format.ipynb) 和 [字符串操作符](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/02_string/28_string_operators.ipynb)。"
+    "- 操作符 `%` 可以用来格式化字符串，而在**格式化迷你语言**中，定义了非常多的有特殊意义操作符。具体详见 [str.format 格式化](../02_string/25_str.format.ipynb) 和 [字符串操作符](../02_string/28_string_operators.ipynb)。"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
