--- a/10_statement/02_assignment.ipynb
+++ b/10_statement/02_assignment.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "赋值语句用于将名称绑定或重新绑定到特定值，以及修改属性或可变对象的成员项。\n",
     "\n",
-    "赋值语句使用赋值操作符和增强赋值操作符。详见 [操作符概述](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/09_operator/01_operator_summary.ipynb)。"
+    "赋值语句使用赋值操作符和增强赋值操作符。详见 [操作符概述](../09_operator/01_operator_summary.ipynb)。"
    ]
   },
   {
@@ -414,7 +414,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
