--- a/10_statement/04_for.ipynb
+++ b/10_statement/04_for.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "对于简单语句可以写为一行，但不推荐。\n",
     "\n",
-    "表达式 expression_list 被求值一次，它应该产生一个可迭代对象。系统将为 expression_list 的结果创建一个迭代器，然后每一项会按标准赋值规则（详见见 [赋值语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/02_assignment.ipynb)）被依次赋值给 target_list，每赋值一次执行一次语句下的代码。\n",
+    "表达式 expression_list 被求值一次，它应该产生一个可迭代对象。系统将为 expression_list 的结果创建一个迭代器，然后每一项会按标准赋值规则（详见见 [赋值语句](../10_statement/02_assignment.ipynb)）被依次赋值给 target_list，每赋值一次执行一次语句下的代码。\n",
     "\n",
     "当所有项被耗尽时，else 子句如果存在将会被执行，并终止循环。"
    ]
@@ -142,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -156,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
