--- a/10_statement/10_def.ipynb
+++ b/10_statement/10_def.ipynb
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "函数形参 `parameter_list` 详见 [函数形参](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/12_function/03_formal_parameter.ipynb)。\n",
+    "函数形参 `parameter_list` 详见 [函数形参](../12_function/03_formal_parameter.ipynb)。\n",
     "\n",
     "函数标注 `-> expression` 可以是任何表达式，标注对提高代码的可读性非常有用，看标注而不需要看代码上下文就大概知道代码的使用。例如："
    ]
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
