--- a/10_statement/12_yield.ipynb
+++ b/10_statement/12_yield.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "yield 语句，仅在定义 [生成器函数](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/12_function/09_generator.ipynb) 时使用，并且仅被用于生成器函数的函数体内部。语法如下：\n",
+    "yield 语句，仅在定义 [生成器函数](../12_function/09_generator.ipynb) 时使用，并且仅被用于生成器函数的函数体内部。语法如下：\n",
     "```\n",
     "yield from expression\n",
     "```\n",
@@ -166,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -180,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
