--- a/10_statement/13_class.ipynb
+++ b/10_statement/13_class.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "类也可以被装饰，就像装饰函数一样，装饰器表达式的求值规则与函数装饰器相同（详见 [def 定义函数](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/10_def.ipynb)）。结果随后会被绑定到类名称。"
+    "类也可以被装饰，就像装饰函数一样，装饰器表达式的求值规则与函数装饰器相同（详见 [def 定义函数](../10_statement/10_def.ipynb)）。结果随后会被绑定到类名称。"
    ]
   },
   {
@@ -135,7 +135,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
