--- a/12_function/02_function_definition.ipynb
+++ b/12_function/02_function_definition.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "函数定义有两种方式，def 语句定义有名字的函数（详见 [def 定义函数](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/10_def.ipynb)），lambda 表达式定义匿名函数（详见 [lambda 函数](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/12_function/08_lambda.ipynb)）。\n",
+    "函数定义有两种方式，def 语句定义有名字的函数（详见 [def 定义函数](../10_statement/10_def.ipynb)），lambda 表达式定义匿名函数（详见 [lambda 函数](../12_function/08_lambda.ipynb)）。\n",
     "\n",
     "定义一个函数，即是创建了一个函数可执行代码的包装器，他将函数想要实现的功能包装起来。然后通过调用它来实现其功能。def 语句 详细介绍了定义函数的语法规则，下面看看如何将一个功能包装起来。\n",
     "\n",
@@ -229,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -243,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
