--- a/12_function/04_return_value.ipynb
+++ b/12_function/04_return_value.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "函数返回值通过 [return 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/11_return.ipynb) 来实现，调用函数时，返回 return 语句之后表达式的值，没有 return 语句或 return 语句之后为空的函数，调用函数默认返回 None。"
+    "函数返回值通过 [return 语句](../10_statement/11_return.ipynb) 来实现，调用函数时，返回 return 语句之后表达式的值，没有 return 语句或 return 语句之后为空的函数，调用函数默认返回 None。"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "返回值可以是任何值。如果 return 之后的表达式中包含函数自身的调用，则该函数称为递归函数。详见 [递归函数](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/12_function/05_recursion.ipynb)。"
+    "返回值可以是任何值。如果 return 之后的表达式中包含函数自身的调用，则该函数称为递归函数。详见 [递归函数](../12_function/05_recursion.ipynb)。"
    ]
   },
   {
@@ -252,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
