--- a/12_function/07_function_call.ipynb
+++ b/12_function/07_function_call.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "函数名之后带一个圆括号，圆括号内，根据形参的类型（详见[函数形参](xue/脚本/kp_book/12_function/03_formal_parameter.ipynb)），给函数传递相应的实参，即可调用函数，执行函数体中的代码。\n",
+    "函数名之后带一个圆括号，圆括号内，根据形参的类型（详见[函数形参](../12_function/03_formal_parameter.ipynb)），给函数传递相应的实参，即可调用函数，执行函数体中的代码。\n",
     "\n",
     "函数调用传递的实参分为：**位置参数**和**关键字参数**。\n",
     "\n",
@@ -219,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
