--- a/12_function/09_generator.ipynb
+++ b/12_function/09_generator.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "函数定义中使用了 [yield 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/12_yield.ipynb)，该定义创建的函数是生成器函数。生成器函数通常也直接叫生成器。\n",
+    "函数定义中使用了 [yield 语句](../10_statement/12_yield.ipynb)，该定义创建的函数是生成器函数。生成器函数通常也直接叫生成器。\n",
     "\n",
     "当一个生成器函数被调用的时候，它返回一个迭代器，也称为生成器（全称是生成器迭代器，下面所说生成器均指生成器迭代器）。然后通过这个生成器来控制生成器函数的执行。\n",
     "\n",
@@ -210,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
