--- a/13_exception/01_ex_summary.ipynb
+++ b/13_exception/01_ex_summary.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Python 解析器会在检测到代码运行错误的时候引发异常。也可以通过 raise 语句显式地引发异常。\n",
     "\n",
-    "异常处理通过 [try 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/14_try.ipynb) 来指定。该语句的 finally 子句可被用来指定清理代码，它并不处理异常，而是无论之前的代码是否发生异常都会被执行。\n",
+    "异常处理通过 [try 语句](../10_statement/14_try.ipynb) 来指定。该语句的 finally 子句可被用来指定清理代码，它并不处理异常，而是无论之前的代码是否发生异常都会被执行。\n",
     "\n",
     "Python 的错误处理采用的是 “终止” 模型：异常处理器可以找出发生了什么问题，并在外层继续执行，但它不能修复错误的根源并重试失败的操作（除非通过从顶层重新进入出错的代码片段）。\n",
     "\n",
@@ -107,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
