--- a/13_exception/02_handling.ipynb
+++ b/13_exception/02_handling.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "异常处理通过 try 语句（详细语法及使用规则见 [try 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/14_try.ipynb)）来实现。\n",
+    "异常处理通过 try 语句（详细语法及使用规则见 [try 语句](../10_statement/14_try.ipynb)）来实现。\n",
     "\n",
     "通过 try 语句处理程序已经出现或可能出现异常，使代码能够继续执行，否则异常未被处理，程序终止执行。\n",
     "\n",
@@ -255,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
