--- a/13_exception/03_raising.ipynb
+++ b/13_exception/03_raising.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[raise 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/15_raise.ipynb) 允许强制发生指定的异常。"
+    "[raise 语句](../10_statement/15_raise.ipynb) 允许强制发生指定的异常。"
    ]
   },
   {
@@ -77,7 +77,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -91,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
