--- a/13_exception/05_finally.ipynb
+++ b/13_exception/05_finally.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "try 语句有另一个可选子句 finally，用于定义必须在所有情况下执行的清理操作（详见 [try 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/14_try.ipynb)）。\n",
+    "try 语句有另一个可选子句 finally，用于定义必须在所有情况下执行的清理操作（详见 [try 语句](../10_statement/14_try.ipynb)）。\n",
     "\n",
     "例如，在 finally 子句中关闭打开的文件："
    ]
@@ -100,7 +100,7 @@
    "source": [
     "某些对象（例如文件对象）定义了在不再需要该对象时，要执行的标准清理操作，无论使用该对象的操作是成功还是失败，清理操作都会被执行。此时使用 with 语句允许像文件这样的对象能够以一种确保它们得到及时和正确的清理的方式使用。\n",
     "\n",
-    "with 语句相当于将引发异常情况下的清理操作放到了 except 子句中，正常情况下的清理操作放到了 finally 子句中。详情见 [with 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/16_with.ipynb)。"
+    "with 语句相当于将引发异常情况下的清理操作放到了 except 子句中，正常情况下的清理操作放到了 finally 子句中。详情见 [with 语句](../10_statement/16_with.ipynb)。"
    ]
   },
   {
@@ -131,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
