--- a/14_file/03_write.ipynb
+++ b/14_file/03_write.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "打开方式不同，会创建不同类型的文件对象（流），不同类型的文件对象，可能有不同的属性或方法。\n",
     "\n",
-    "打开模式不同，写入内容的方式也会不同，详见 [open() 打开文件](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/45_open.ipynb)。\n",
+    "打开模式不同，写入内容的方式也会不同，详见 [open() 打开文件](../11_built-in_function/45_open.ipynb)。\n",
     "\n",
     "下列检查或写入内容的属性或方法，是多数文件对象通用的：\n",
     "\n",
@@ -264,7 +264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
