--- a/15_module/04_executable_file.ipynb
+++ b/15_module/04_executable_file.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "下面举例说明：\n",
     "\n",
-    "当前文件路径下，有一个 `mycode` 的包，包里有 `space.py`，`mycode.py` 和 `xue.py`，三个模块，内容如下："
+    "当前文件路径下，有一个 `myfile` 的包，包里有 `space.py` 和 `mycode.py` 模块，内容如下："
    ]
   },
   {
@@ -58,84 +58,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mycode\n",
-      "自学是门手艺\n"
+      "我是mycode模块中的代码\n",
+      "我是导入其他模块不会执行的代码\n"
      ]
     }
    ],
    "source": [
-    "# mycode.py\n",
-    "print('mycode')\n",
+    "# mycode.py 的内容, 在此源码直接执行\n",
+    "_a = '自学'\n",
     "\n",
-    "from mycode import xue\n",
+    "def __f():\n",
+    "    print(_a)\n",
+    "\n",
+    "msg1 = '我是mycode模块中的代码'\n",
+    "print(msg1)\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    print(xue.msg)"
+    "    msg2 = '我是导入其他模块不会执行的代码'\n",
+    "    print(msg2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我是mycode模块中的代码\n",
+      "我是mycode模块中的代码\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'myfile.mycode' has no attribute 'msg2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21344/86150704.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmyfile\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmycode\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmycode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmsg1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmycode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmsg2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'myfile.mycode' has no attribute 'msg2'"
+     ]
+    }
+   ],
    "source": [
-    "# xue.py\n",
-    "msg = '自学是门手艺'"
+    "# 导入不会执行 __name__ == '__main__' 下面的代码\n",
+    "from myfile import mycode\n",
+    "print(mycode.msg1)\n",
+    "mycode.msg2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "直接执行效果如上。下面使用命令执行（`%run` 是 jupyter 的魔法命令，终端请改为 `python`）："
+    "命令行直接执行模块效果同上。下面使用命令执行（`%run` 是 jupyter 的魔法命令，终端请改为 `python`）："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 文件路径必须带 .py，可以是相对或绝对路径\n",
+    "%run myfile/space.py "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我是mycode模块中的代码\n",
+      "我是导入其他模块不会执行的代码\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run myfile/mycode.py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 文件路径必须带 .py，可以是相对或绝对路径\n",
-    "%run mycode/space.py "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mycode\n",
-      "自学是门手艺\n"
-     ]
-    }
-   ],
-   "source": [
-    "%run mycode/mycode.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mycode\n",
-      "自学是门手艺\n"
+      "我是mycode模块中的代码\n",
+      "我是导入其他模块不会执行的代码\n"
      ]
     }
    ],
@@ -144,31 +171,13 @@
     "warnings.filterwarnings(\"ignore\") \n",
     "\n",
     "# 模块可以使用属性表示法，但不能有 .py\n",
-    "%run -m mycode.mycode "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mycode\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 导入则不会执行 if __name__ == '__main__': 语句下的代码\n",
-    "import mycode.mycode"
+    "%run -m myfile.mycode "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
