--- a/16_class/06_variable.ipynb
+++ b/16_class/06_variable.ipynb
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "改变变量作用域，详见 [global 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/19_global.ipynb) 和 [nonlocal 语句](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/10_statement/20_nonlocal.ipynb)。"
+    "改变变量作用域，详见 [global 语句](../10_statement/19_global.ipynb) 和 [nonlocal 语句](../10_statement/20_nonlocal.ipynb)。"
    ]
   },
   {
@@ -196,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
