--- a/16_class/08_method.ipynb
+++ b/16_class/08_method.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "类方法（第一个参数通常命名为 cls）则无论是类或是实例调用，方法都将获取类对象作为其第一个参数。类方法定义详见 [classmethod 封装函数为类方法](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/10_classmethod.ipynb)。"
+    "类方法（第一个参数通常命名为 cls）则无论是类或是实例调用，方法都将获取类对象作为其第一个参数。类方法定义详见 [classmethod 封装函数为类方法](../11_built-in_function/10_classmethod.ipynb)。"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "静态方法则不会接收隐式的第一个参数。调用它需要正常传递参数。静态方法详见 [staticmethod 封装函数为静态方法](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/58_staticmethod.ipynb)。"
+    "静态方法则不会接收隐式的第一个参数。调用它需要正常传递参数。静态方法详见 [staticmethod 封装函数为静态方法](../11_built-in_function/58_staticmethod.ipynb)。"
    ]
   },
   {
@@ -313,7 +313,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
