--- a/16_class/10_scope.ipynb
+++ b/16_class/10_scope.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "当一个名称在代码块中被使用时，会由包含它的最近作用域来解析。对一个代码块可见的所有这种作用域的集合称为该代码块的环境。\n",
     "\n",
-    "一个作用域是一个 [命名空间](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/16_class/09_namespace.ipynb) 可直接访问的 Python 程序的文本区域。这里的 “可直接访问” 意味着对名称的非限定引用（限定引用指点号表达式例如 math.pi）会尝试在命名空间中查找名称。"
+    "一个作用域是一个 [命名空间](../16_class/09_namespace.ipynb) 可直接访问的 Python 程序的文本区域。这里的 “可直接访问” 意味着对名称的非限定引用（限定引用指点号表达式例如 math.pi）会尝试在命名空间中查找名称。"
    ]
   },
   {
@@ -385,7 +385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -399,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
